Server: - API v2. - API on api.py
Clients:
- renamed files.
- Appindicator support and notify support in GTK client.
- API v2.

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -1,5 +1,5 @@
 application: streampy
-version: 1
+version: 2
 runtime: python
 api_version: 1
 
@@ -32,6 +32,9 @@ handlers:
 - url: /cron/stats
   script: cron/stats.py
   login: admin
+
+- url: /api/.*
+  script: api.py
 
 - url: /admin/.*
   script: admin.py
