- Removed old client. - new_client -> Pystream Sharing Tool. - API completed. - Lots of bug fixes.

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -34,6 +34,10 @@ handlers:
   script: cron/searches.py
   login: admin
 
+- url: /cron/streams
+  script: cron/streams.py
+  login: admin
+
 - url: /api/.*
   script: api.py
 
